# clickpaste-linux

./: CMakeLists.txt  LICENSE  README.md
packaging/aur/: .SRCINFO  PKGBUILD  PKGBUILD-git  README.md  clickpaste.install
packaging/systemd/: ydotoold.conf  ydotoold.service
resources/: clickpaste.desktop  resources.qrc
src/: application.cpp  application.h  clipboardmanager.cpp  clipboardmanager.h  hotkeymanager.cpp  hotkeymanager.h  inputemulator.cpp  inputemulator.h  main.cpp  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  targetoverlay.cpp  targetoverlay.h  trayicon.cpp  trayicon.h
